--- a/clubs.html
+++ b/clubs.html
@@ -100,7 +100,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                <li class="nav-item"><a class="nav-link" href="gwa.html">GWA Calculator</a></li>
+                <li class="nav-item"><a class="nav-link" href="GWA.html">GWA Calculator</a></li>
                 <li class="nav-item"><a class="nav-link" href="clubs.html">School Clubs</a></li>
             </ul>
             <i class="bi bi-person-circle role-icon"></i>
