--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link" href="gwa.html">GWA Calculator</a>
+                        <a class="nav-link" href="GWA.html">GWA Calculator</a>
                     </li>
 
                     <li class="nav-item">
